static/css/main.css
/* html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video  */

:root {

  --button_color:       #808080;
  --button_color_hover: #A00000;

  --table_bg:           #FFFFFF;
  --table_color_hover:  #A0A0A0;

  --RED:                #F00000;
  --LIGHT_RED:          #FFF0F0;

  --BLUE:               #0000F0;
  --LIGHT_BLUE:         #F0F0FF;

  --PURPLE:             #3333CC;
  --LIGHT_PURPLE:       #F0F0CC;

  --YELLOW:             #FFFF00;
  --LIGHT_YELLOW:       #FFFFF0;

  --GREEN:              #008000;
  --LIGHT_GREEN:        #F0FFF0;

  --BLACK:              #000000;
  --WHITE:              #FFFFFF;
}

html {
    min-height: 100%;
    min-width: 100%;
}

body {
    padding: 0;
    vertical-align: top;
    text-align: left;
}

header{
    /* border-radius:          0.1em; */
    /* color: rgba(255,255,255,0.70); */
    text-align:             center;
    vertical-align:         center;
    /* background-color: var(--BLACK); */
    /* background-image: url('../img/logo.png'); */
    background-image:       url('../img/soldierA.jpg');
    background-repeat:      no-repeat;
    background-position:    center;
    background-size:        cover;
    filter:                 drop-shadow(0 0 2em black) grayscale(0.5);
    font-size:              350%;
    padding:                1em;
}


h1, h3{
    /* border-radius: 0.1em; */
    color:              var(--WHITE); /* ,alpha); */
    text-align:         center;
    background-color:   var(--BLACK);
    padding:            0.5em;
    /* text-transform: capitalize; */
    text-transform:     uppercase;
    margin:             0px;
}
h1 {
    font-size: 175%;
}
h3 {
    font-size: 125%;
}
h1:hover, h3:hover, header:hover{
    color: var(--button_color_hover);
}


h2 {
    text-align: center;
    font-size: 100%
}


#main-nav {
    margin: 0;
    width: 100%;
    display: table;
    table-layout: fixed;
    padding-inline-start: 0;
}
#main-nav li {
    display: table-cell;
    text-align: center;
    padding-left: 0.25em;
    text-transform: uppercase;
}
#main-nav li:first-child {
    padding-left: 0;
}
#main-nav li a {
    width: 100%;
    display: block;
    height: 100%;
    line-height: 3em;
    text-decoration: none;
    background-color: var(--button_color);
    font-size: 125%;
    border-radius: 0.1em;
    color: #FFFFFF;
}
#main-nav li a:hover {
    background-color: var(--button_color_hover);
    transform: scale(1.05);
}

.grid_container {
    margin: 0;
    width: 100%;
    display: table;
    table-layout: fixed;
    padding-inline-start: 0;
}

.grid_element {
    display: table-cell;
    text-align: center;
    vertical-align: top;
}

.grid_element.middle {
    width: 65%;
    padding-left: 0.5%;
    padding-right: 0.5%;
}

.leaderboard, .leaderboard_header{
    animation-duration: 0.5s;
    animation-name: slidein;
}

@keyframes slidein {
    from {
        margin-right: 100%;
        width:  300%;
    }

    to {
        margin-right: 0%;
        width: 100%;
    }
}
/* Style the tab */

/* .tablinks {
    background-color: var(--button_color);
    color: white;
    text-transform: uppercase;
    padding: 1em;
    border-style: none;
    border-radius: 0.1em;
} */

/* .tab {
  overflow: hidden;
  text-align: center;
  background-color: #f1f1f1;
} */

/* .tab li:hover {
  background-color: var(--button_color_hover);
} */

/* Create an active/current tablink class */
.tab a.tablink.active {
  background-color: var(--button_color_hover);
}

/* Style the tab content */
/* .tabcontent {
  display: none;
  padding: 6px 12px;
  border: 1px solid #ccc;
  border-top: none;
} */


form {
    padding: 1em;
    text-align: center;
    width: 80%;
}

.form_field {
    text-align: left;
    padding: 1em;
    display: inline-block;
    width: 30%
}

legend {
    padding: 1em;
    text-align: center;
    font-size: 125%;
}
label, select{
    font-size: 110%;
    background-color: #FFFFFF;
}


input {
    padding: 1em;
    width: 100%;
    margin: 0.5em 0;
    box-sizing: border-box;
}

.button {
    border-radius: 0.2em;
    padding: 1em;
    font-size: 150%;
    text-transform: uppercase;
    width: 60%;
    background-color: var(--button_color);
    color: var(--WHITE);
}

button:hover, .button:hover {
    background-color: var(--button_color_hover);
    transform: scale(1.05);
  }

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1em;
  width: 100%;
}

option {
  padding: 1em;
  width: 100%;
}

fieldset {
  background-repeat: no-repeat;
  background-position: right center;
}

table {
  border-collapse: collapse;
  align-items: center;
  width: 100%;
}

.header {
  color: #FFFFFF;
  border-bottom: 1px solid var(--BLACK);
  padding: 1em;
  text-align: center;
  background-color: var(--BLACK);
  font-weight: bold;
  text-transform: uppercase;
  white-space: pre-line;
}

.row {
  border-bottom: 1px solid var(--BLACK);
  background-color: var(--table_bg)
  padding: 1em;
  text-align: center;
  text-transform: uppercase;
}
.row:hover {background-color: var(--table_color_hover);}

td {
  padding: 1em;
}


/* .row.team1 {
    background-color: var(--LIGHT_RED);
}
.row.team2 {
    background-color: var(--LIGHT_BLUE);
}
.row.team3 {
    background-color: var(--LIGHT_YELLOW);
}
.row.team4 {
    background-color: var(--LIGHT_GREEN);
}
.row.team5 {
    background-color: var(--LIGHT_PURPLE);
} */

.roster_element {
    padding: 0.5em;
}

.row.team1:hover {
    background-color: var(--RED);
    color: var(--WHITE);
    font-weight: bold;
}
.row.team2:hover {
    background-color: var(--BLUE);
    color: var(--WHITE);
    font-weight: bold;
}
.row.team3:hover {
    background-color: var(--YELLOW);
    color: var(--WHITE);
    font-weight: bold;
}
.row.team4:hover {
    background-color: var(--GREEN);
    color: var(--WHITE);
    font-weight: bold;
}
.row.team5:hover {
    background-color: var(--PURPLE);
    color: var(--WHITE);
    font-weight: bold;
}


.beacon-container {
  position: relative;
  padding: 0;
}

.beacon {
  content: '';
  display: block;
  width: 4%;
  height: 0;
  padding-bottom: calc(4%);
  border: 1vw;
  border-radius: 50%;
  position: absolute;
  /* top: 50%;
  left: 50%; */
  animation: pulsate infinite 1.5s;
}

@keyframes pulsate {
  from {transform: scale(0.8);
      opacity: 1;
  }
  to {transform: scale(1.2);
        opacity: 0;
  }
}

svg {
    /* background-image: url('../img/field.png'); */
    background-repeat: no-repeat;
    background-size: contain;
}

path {
    opacity: 0;
    transform-origin: center;
    transform-box: fill-box;
}
path:hover {
    fill: var(--WHITE);
    opacity: 0.25;
    transform: scale(1.1);
}

path.owned {
    opacity: 0.5;
}


div.table-wrapper {
    border: 1px solid var(--BLACK));
    max-height: 40em;
    width: 100%;
    overflow-y: auto;
 }


div.team-leaderboard {
    border: 1px solid var(--BLACK));
    width: 100%;
}

div.player-leaderboard {
    border: 1px solid var(--BLACK));
    max-height: 30em;
    width: 100%;
    overflow-y: auto;
}

.leaderboard_header {
    background: linear-gradient(90deg, var(--BLACK), var(--button_color), var(--BLACK));
    text-align: center;

}

div.roster {
    max-height: 22.8em;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
}

table {
   width: 100%;
   border: 1px solid var(--BLACK));
 }

thead th {
   position: sticky;
   top: 0px;
 }

table thead tr th {
  position: sticky;
}

#fields {
    display: flex;
    justify-content: space-between;
}


#mbr_search {
  /* background-image: url('../img/ss.png');
  background-size: contain;
  background-position: right center;
  background-repeat: no-repeat; */
  float: right;
  width: 40%;
  font-size: 1em;
  padding: 1em;
  border: 1px solid var(--button_color);
  border-radius: 0.2em;
}

a:link { text-decoration: none; }
a:visited { text-decoration: none; }
a:hover { text-decoration: none; }
a:active { text-decoration: none; }
a { text-decoration: none; }


footer {
    padding: 3em;
}

/* Player Registration Form */

dd, dt {
    margin-inline-start: 0;
}


#players.select {
    width: 100%;
}

#user_registration {
    width: 70%;
}



.glow {
  color: #FFFF;
  text-align: center;
  -webkit-animation: glow 1.5s ease-in-out infinite alternate;
  -moz-animation: glow 1.5s ease-in-out infinite alternate;
  animation: glow 1.5s ease-in-out infinite alternate;
}

@-webkit-keyframes glow {
  from {
    text-shadow: 0 0 0.1em #FFA, 0 0 0.2em #F82;
  }
  to {
    text-shadow: 0 0 0.2em #DA0, 0 0 0.8em #E60
  }
}


.error {
  border: 1px solid rgba(241, 6, 6, 0.81);
    background-color: rgba(220, 17, 1, 0.16);
    box-shadow: 0px 0px 2px #ff0303;
    color: #ff0303;
    text-shadow: None;
  transition:0.5s;
  cursor:pointer;
  font-size: 110%;
}

.alert:hover {
  background-color: rgba(220, 17, 1, 0.33);
  transition:0.5s;
}


.success {
    border: 1px solid rgba(36, 241, 6, 0.46);
    background-color: rgba(7, 149, 66, 0.12);
    box-shadow: 0px 0px 2px #259c08;
    color: #0ad406;
  text-shadow: None;
  transition:0.5s;
  cursor:pointer;
  font-size: 110%;
}

.success:hover{
  background-color: rgba(7, 149, 66, 0.35);
  transition:0.5s;
}

.node_container {
    display: inline-block;
    vertical-align: top;
    height: 100%;
    width: 25%;

}

.node_cmds {
    display: inline-block;
    vertical-align: top;
    width: 25%;

}

.beacon-container.node {
    display: inline-block;
    width: 40%;

}
.game_control {

}
.node_block {
    width: 100%;
    border-width: 3px;
    border-style: solid;
    border-color: black;
    padding: .2em;

}

.node_img_div {
    display: inline-block;
    border-width: 1px;
    border-style: solid;
    border-color: black;
    padding: .1em;

}

